# celery-farm

./: LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci_cd.yml
backend/: Dockerfile  Makefile  main.py  pyproject.toml  requirements.txt  setup.cfg
backend/api/: main.py
backend/api/core/: config.py  event_handlers.py
backend/api/routes/: crud.py
backend/core/: config.py  event_handlers.py
backend/db/: client.py  config.py
backend/models/: data.py  instances.py  model.py  solutions.py  solver.py
backend/optimizer/: solver.py  solver_interface.py
backend/routes/: crud.py  router.py
backend/workers/: celery.py  config.py  main.py  tasks.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/Solver/: AddSolver.js  DisplaySolver.js  SolverForm.js
frontend/src/components/UI/: Button.js  Card.js
