[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jason Eisele <jmeisele@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"
pydantic = "^1.9.0"
uvicorn = "^0.16.0"
celery = {extras = ["redis"], version = "^5.2.3"}
redis = "^4.1.0"
gunicorn = "^20.1.0"
motor = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
black = "^21.12b0"
isort = "^5.10.1"
mypy = "^0.930"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
# This section is just a doc placeholder..see setup.cfg
#   https://gitlab.com/pycqa/flake8/-/issues/428#note_251982786
max-complexity = 10
format = "pylint"
statistics = "True"
max-line-length = 120
# ignore non-PEP8 lints
ignore = ["E203", "W503"]